force-app/main/default/objects/Trading_Account__c/Trading_Account__c.object-meta.xml
<CustomObject>
    <label>Trading Account</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Trading Account ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trading Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>