force-app/main/default/objects/Trading_Account__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <label>Account Number</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>